--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,22 @@
 <%- include("header") -%>
 
-
+<div class="container">
+    <div class="myCard">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="myLeftCtn">
+                    <form class="myForm text-center">
+                        <header>Create new Account</header>
+                        <div class="form-group">
+                            <i class="fas fa-user"></i>
+                            <input type="text" class="myInput" placeholder="Username" id="username" required>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <%- include("footer") -%>
