--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,6 +11,11 @@
                             <i class="fas fa-user"></i>
                             <input type="text" class="myInput" placeholder="Username" id="username" required>
                         </div>
+                        <div class="form-group">
+                            <i class="fas fa-envelope"></i>
+                            <input type="email" class="myInput" placeholder="Email" id="userId" required>
+                        </div>
+                      
                     </form>
                 </div>
             </div>
