--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,10 @@
                             <i class="fas fa-envelope"></i>
                             <input type="email" class="myInput" placeholder="Email" id="userId" required>
                         </div>
-                      
+                        <div class="form-group">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" class="myInput" placeholder="Password" id="username" required>
+                        </div>
                     </form>
                 </div>
             </div>
