--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,15 +8,15 @@
                     <form class="myForm text-center">
                         <header>Create new Account</header>
                         <div class="form-group">
-                            <i class="fas fa-user"></i>
+                            <i class="fa fa-user"></i>
                             <input type="text" class="myInput" placeholder="Username" id="username" required>
                         </div>
                         <div class="form-group">
-                            <i class="fas fa-envelope"></i>
+                            <i class="fa fa-envelope"></i>
                             <input type="email" class="myInput" placeholder="Email" id="userId" required>
                         </div>
                         <div class="form-group">
-                            <i class="fas fa-lock"></i>
+                            <i class="fa fa-lock"></i>
                             <input type="password" class="myInput" placeholder="Password" id="username" required>
                         </div>
                     </form>
