created a button where user can submit their form after filling the required details

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,6 +19,7 @@
                             <i class="fa fa-lock"></i>
                             <input type="password" class="myInput" placeholder="Password" id="username" required>
                         </div>
+                        <input type="submit" class="button" value="CREATE ACCOUNT">
                     </form>
                 </div>
             </div>
