created some temporary right side content

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,6 +23,15 @@
                     </form>
                 </div>
             </div>
+
+            <div class="col-md-6">
+                <div class="myRightCtn">
+                    <div class="box"><header>Hello World!</header>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni doloremque atque earum non, quasi, ab ad ipsa, provident cupiditate dolor facere eum debitis aspernatur modi itaque fuga quidem dolore saepe!</p>
+                    <input type="button" class="button" value="Learn More">
+                </div>
+            </div>
+</div>
         </div>
     </div>
 </div>
