--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,15 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.myRightCtn{
+    position: relative;
+    background-image: linear-gradient(45deg, #f046ff, #9b00e8);
+    border-radius: 25px;
+    height: 100%;
+    padding: 25px;
+    color: rgb(192, 192, 192);
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
