--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,3 +41,19 @@ body{
     font-weight: 700;
     margin-bottom: 20px;
 }
+.row{
+    height: 100%;
+}
+.myCard{
+    position: relative;
+    background: #fff;
+    height: 100%;
+    border-radius: 25px;
+    -webkit-box-shadow: 0px 10px 40px -10px rgba(0,0,0,.7);
+    -moz-box-shadow: 0px 10px 40px -10px rgba(0,0,0,.7);
+    box-shadow: 0px 10px 40px -10px rgba(0,0,0,.7);
+}
+.myRightCtn header{
+    color: #fff;
+    font-size: 44px;
+}
