--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background: #fbf3ff;
+    background-image: linear-gradient(45deg, blue, blue);
 }
 .container{
     position: absolute;
@@ -56,4 +56,22 @@ body{
 .myRightCtn header{
     color: #fff;
     font-size: 44px;
+}
+.box{
+    position: relative;
+    margin: 20px;
+    margin-bottom: 100px;
+}
+.myLeftCtn .myInput{
+    width: 230px;
+    border-radius: 25px;
+    padding: 10px;
+    padding-left: 50px;
+    border: none;
+    -webkit-box-shadow: 0px 10px 49px -14px rgba(0,0,0,.7);
+    -moz-box-shadow: 0px 10px 49px -14px rgba(0,0,0,.7);
+    box-shadow: 0px 10px 49px -14px rgba(0,0,0,.7);
+}
+.myLeftCtn .myInput:focus{
+    outline: none;
 }
