--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,3 +75,18 @@ body{
 .myLeftCtn .myInput:focus{
     outline: none;
 }
+.myForm{
+    position: relative;
+    margin-top: 50px;
+}
+.myLeftCtn .button{
+    background: linear-gradient(45deg, #bb36fd, #9b00e8);
+    color: #fff;
+    width: 230px;
+    border: none;
+    border-radius: 25px;
+    padding: 10px;
+    -webkit-box-shadow: 0px 10px 41px -11px rgba(0,0,0,.7);
+    -moz-box-shadow: 0px 10px 41px -11px rgba(0,0,0,.7);
+    box-shadow: 0px 10px 41px -11px rgba(0,0,0,.7);
+}
