--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: linear-gradient(45deg, blue, blue);
+    background: linear-gradient(45deg, blue, blue);
 }
 .container{
     position: absolute;
@@ -89,4 +89,29 @@ body{
     -webkit-box-shadow: 0px 10px 41px -11px rgba(0,0,0,.7);
     -moz-box-shadow: 0px 10px 41px -11px rgba(0,0,0,.7);
     box-shadow: 0px 10px 41px -11px rgba(0,0,0,.7);
+}
+.myLeftCtn .button:hover{
+    background: linear-gradient(45deg, #c85bff, #b726ff);
+}
+.myLeftCtn .fa{
+    position: relative;
+    color: #bb36fd;
+    left: 36px;
+}
+.button{
+    background: transparent;
+    color: #fff;
+    width: 120px;
+    border: 2px solid #fff;
+    border-radius: 25px;
+    padding: 10px;
+    -webkit-box-shadow: 0px 10px 49px -14px rgba(0,0,0,.7);
+    -moz-box-shadow: 0px 10px 49px -14px rgba(0,0,0,.7);
+    box-shadow: 0px 10px 49px -14px rgba(0,0,0,.7);
+}
+.button:hover{
+    border: 2px solid #eecbff;
+}
+.button:focus{
+    outline: none;
 }
