--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,11 +24,13 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="right col-md-6">
                 <div class="myRightCtn">
-                    <div class="box"><header>Hello World!</header>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni doloremque atque earum non, quasi, ab ad ipsa, provident cupiditate dolor facere eum debitis aspernatur modi itaque fuga quidem dolore saepe!</p>
-                    <input type="button" class="button" value="Learn More">
+                    <div class="box"><header>Worldwide COVID</header>
+                    <img src="images/covid.jpg" alt="">
+                    <h3>Join US</h3>
+                    <h4>Health and Wellness</h4>
+                    <input type="button" class="button" value="About Us">
                 </div>
             </div>
 </div>
