--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,8 +7,7 @@ body{
     /* background: -webkit-linear-gradient(to left, rgba(0, 0, 255, 0.5), #8000ffbe); */    
 
         height: 100vh;
-        background: linear-gradient(#10416b, black); 
-      
+        background: linear-gradient(to left,#009ffd, #2A2A72); 
 }
 .container{
     position: absolute;
