--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,41 +1,46 @@
 <%- include("header") -%>
 
+<!-- Main container -->
 <div class="container">
-    <div class="myCard">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="myLeftCtn">
-                    <form class="myForm text-center">
-                        <header>Create new Account</header>
-                        <div class="form-group">
-                            <i class="fa fa-user"></i>
-                            <input type="text" class="myInput" placeholder="Username" id="username" required>
-                        </div>
-                        <div class="form-group">
-                            <i class="fa fa-envelope"></i>
-                            <input type="email" class="myInput" placeholder="Email" id="userId" required>
-                        </div>
-                        <div class="form-group">
-                            <i class="fa fa-lock"></i>
-                            <input type="password" class="myInput" placeholder="Password" id="username" required>
-                        </div>
-                        <input type="submit" class="button" value="CREATE ACCOUNT">
-                    </form>
-                </div>
-            </div>
+  <div class="myCard">
+    <div class="row">
 
-            <div class="right col-md-6">
-                <div class="myRightCtn">
-                    <div class="box"><header>Worldwide COVID</header>
-                    <img src="images/covid.jpg" alt="">
-                    <h3>Join US</h3>
-                    <h4>Health and Wellness</h4>
-                    <input type="button" class="button" value="About Us">
-                </div>
+      <!-- left Part -->
+      <div class="col-md-6">
+        <div class="myLeftCtn">
+          <form class="myForm text-center">
+            <header>Create new Account</header>
+            <div class="form-group">
+              <i class="fa fa-user"></i>
+              <input type="text" class="myInput" placeholder="Username" id="username" required>
             </div>
-</div>
+            <div class="form-group">
+              <i class="fa fa-envelope"></i>
+              <input type="email" class="myInput" placeholder="Email" id="userId" required>
+            </div>
+            <div class="form-group">
+              <i class="fa fa-lock"></i>
+              <input type="password" class="myInput" placeholder="Password" id="username" required>
+            </div>
+            <input type="submit" class="button" value="CREATE ACCOUNT">
+          </form>
         </div>
+      </div>
+
+      <!-- Right Part -->
+      <div class="right col-md-6">
+        <div class="myRightCtn">
+          <div class="box">
+            <header>Worldwide COVID</header>
+            <img src="images/covid.jpg" alt="">
+            <h3>Join US</h3>
+            <h4>Health and Wellness</h4>
+            <input type="button" class="button" value="About Us">
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 
 
