Add some another divs for structuring

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,7 +1,18 @@
 <%- include("header") -%>
 
+<!-- Main container -->
 <div class="conatiner">
-  
+  <div class="myCard">
+    <div class="row">
+
+      <!-- Left Part -->
+      <div class="col-md-6">
+        <div class="myLeftCtn">
+          
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <%- include("footer") -%>
