Add form tag in signin.ejs

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -8,7 +8,9 @@
       <!-- Left Part -->
       <div class="col-md-6">
         <div class="myLeftCtn">
-          
+          <form class="myForm text-center" action="/signin" method="post">
+            
+          </form>
         </div>
       </div>
     </div>
