Add email sign font-awesome icon

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -12,6 +12,9 @@
             <header>
               SignIn/LogIn
             </header>
+            <div class="form-group">
+              <i class="fa fa-envelope"></i>
+            </div>
           </form>
         </div>
       </div>
