--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -12,8 +12,17 @@
             <header>
               SignIn/LogIn
             </header>
+
+            <!-- For email address input -->
             <div class="form-group">
               <i class="fa fa-envelope"></i>
+              <input type="email" class="myInput" placeholder="Email" id="userId" required>
+            </div>
+
+            <!-- For password Input -->
+            <div class="form-group">
+              <i class="fa fa-lock"></i>
+              <input type="password" palceholder="Passwird" id="username" required>
             </div>
           </form>
         </div>
