Add submit button

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -8,7 +8,7 @@
       <!-- Left Part -->
       <div class="col-md-6">
         <div class="myLeftCtn">
-          <form class="myForm text-center" action="/signin" method="post">
+          <form class="myForm text-center" action="/home" method="post">
             <header>
               SignIn/LogIn
             </header>
@@ -24,6 +24,9 @@
               <i class="fa fa-lock"></i>
               <input type="password" palceholder="Passwird" id="username" required>
             </div>
+
+            <!-- Submit button -->
+            <input type="submit" value="SignIn">
           </form>
         </div>
       </div>
