Add divs for right section

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -30,6 +30,15 @@
           </form>
         </div>
       </div>
+
+      <!-- For right part -->
+      <div class="right col-md-6">
+        <div class="myRightCtn">
+          <div class="box">
+            
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
