Add header for right section

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -35,7 +35,9 @@
       <div class="right col-md-6">
         <div class="myRightCtn">
           <div class="box">
-            
+            <header>
+              World Wide Covid-19
+            </header>
           </div>
         </div>
       </div>
