complete the sign in page

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,7 +1,7 @@
 <%- include("header") -%>
 
 <!-- Main container -->
-<div class="conatiner">
+<div class="container">
   <div class="myCard">
     <div class="row">
 
@@ -22,11 +22,11 @@
             <!-- For password Input -->
             <div class="form-group">
               <i class="fa fa-lock"></i>
-              <input type="password" palceholder="Passwird" id="username" required>
+              <input type="password" class="myInput" placeholder="Password" id="username" required>
             </div>
 
             <!-- Submit button -->
-            <input type="submit" value="SignIn">
+            <input type="submit" class="button" value="SignIn">
           </form>
         </div>
       </div>
@@ -36,8 +36,12 @@
         <div class="myRightCtn">
           <div class="box">
             <header>
-              World Wide Covid-19
+              World Wide Covid
             </header>
+            <img src="images/covid.jpg" alt="Covid-Image">
+            <h3>Join Us</h3>
+            <h4>Health and Wellness</h4>
+            <input type="button" class="button" value="About Us">
           </div>
         </div>
       </div>
