--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,6 +23,7 @@
               <input type="password" class="myInput" placeholder="Password" id="username" required>
             </div>
             <input type="submit" class="button" value="CREATE ACCOUNT">
+            <p class="log">Already have an account? <a href="#">SignIn</a></p>
           </form>
         </div>
       </div>
@@ -31,8 +32,8 @@
       <div class="right col-md-6">
         <div class="myRightCtn">
           <div class="box">
-            <header>Worldwide COVID</header>
-            <img src="images/covid.jpg" alt="">
+            <header>COVID-19</header>
+            <img src="images/circle-cropped.png" alt="">
             <h3>Join US</h3>
             <h4>Health and Wellness</h4>
             <input type="button" class="button" value="About Us">
