Add more tags in signin.ejs

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -25,8 +25,11 @@
               <input type="password" class="myInput" placeholder="Password" id="username" required>
             </div>
 
+            <a class="forgot-password" href="#">Forgot Password?</a>
+
             <!-- Submit button -->
-            <input type="submit" class="button" value="SignIn">
+            <input type="submit" class="button" value="LogIn/SignIn">
+            <p class="log">Don't have an account? <a href="#">SignUp</a></p>
           </form>
         </div>
       </div>
@@ -36,9 +39,9 @@
         <div class="myRightCtn">
           <div class="box">
             <header>
-              World Wide Covid
+              Covid-19
             </header>
-            <img src="images/covid.jpg" alt="Covid-Image">
+            <img src="images/circle-cropped.png" alt="Covid-Image">
             <h3>Join Us</h3>
             <h4>Health and Wellness</h4>
             <input type="button" class="button" value="About Us">
