--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,7 +33,7 @@
         <div class="myRightCtn">
           <div class="box">
             <header>COVID-19</header>
-            <img src="images/circle-cropped.png" alt="">
+            <img class="signimg" src="images/circle-cropped.png" alt="">
             <h3>Join US</h3>
             <h4>Health and Wellness</h4>
             <input type="button" class="button" value="About Us">
