--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -41,7 +41,7 @@
             <header>
               Covid-19
             </header>
-            <img src="images/circle-cropped.png" alt="Covid-Image">
+            <img class="signimg" src="images/circle-cropped.png" alt="Covid-Image">
             <h3>Join Us</h3>
             <h4>Health and Wellness</h4>
             <input type="button" class="button" value="About Us">
