add classes in body tag

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,5 +1,5 @@
 <%- include("header") -%>
-  <body>
+<body class="signin">
 <!-- Main container -->
 <div class="container">
   <div class="myCard">
