--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <%- include("header") -%>
-  <body>
+<body class="signup">
 <!-- Main container -->
 <div class="container">
   <div class="myCard">
