--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+.signup, .signin {
   /* background: -webkit-linear-gradient(to left, rgba(0, 0, 255, 0.5), #8000ffbe); */
   height: 100vh;
   background: linear-gradient(to left, #009ffd, #2a2a72);
