--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,7 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-50" alt="...">
+        <img src="images/Corona.png" class="d-block w-50" alt="...">
       </div>
       <div class="carousel-item">
         <img src="..." class="d-block w-100" alt="...">
