--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,7 @@
         <img src="..." class="d-block w-50" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="/images/caro1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="..." class="d-block w-100" alt="...">
