Add commit in style.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+/* Sign up and Register Page */
 .signup, .signin {
   /* background: -webkit-linear-gradient(to left, rgba(0, 0, 255, 0.5), #8000ffbe); */
   height: 100vh;
