--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,49 +3,56 @@
 <body>
 
   <!-- Nav-Bar for HomePage -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Covid-19</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Awareness</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Covid Live</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Suggestion</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Signin</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <!-- Navigation Bar -->
+  <section id="navigation">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+        <div class="container-fluid">
+            <!-- <a class="navbar-brand" href="#"><img src="/images/logo.jpeg"> -->
+            </a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Awareness</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Covid Live</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Suggestion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign in</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Register</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</section>
 
   <!-- carousel for homepage -->
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/Corona.png" class="w-50" alt="...">
+        <img src="images/caro2.jpg" class="w-70" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/images/caro1.jpg" class="w-50" alt="...">
+        <img src="/images/caro1.jpg" class="w-70" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/images/caro4.jpg" class="w-50" alt="...">
+        <img src="/images/caro4.jpg" class="w-70" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
