added an image for two column section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,4 +67,32 @@
 
   <hr class="my-4">
 
+  
+  <!-- making two section -->
+  <section id="two-column">
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="col-lg-6">
+                <h2>If you build it...</h2>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus dolor sit incidunt nesciunt
+                    omnis
+                    rem.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque consequuntur voluptate, ex illum
+                    asperiores ipsum corporis temporibus doloribus error vero iste quam cupiditate quisquam iusto?
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, similique?</p>
+                <br>
+                <a href="#"><button class="btn btn-primary">Learn More</button></a>
+
+            </div>
+            <div class="col-lg-6">
+                <img src="/images/two_column.jpg" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</section>
+
+<hr class="my-4">
+
   <%- include("footer") -%>
