add an image and give class name

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,13 +46,13 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/caro2.jpg" class="w-70" alt="...">
+        <img src="images/caro2.jpg" class="w-70 caro" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/images/caro1.jpg" class="w-70" alt="...">
+        <img src="/images/caro1.jpg" class="w-70 caro" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/images/caro4.jpg" class="w-70" alt="...">
+        <img src="/images/caro4.jpg" class="w-70 caro" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -87,7 +87,8 @@
 
             </div>
             <div class="col-lg-6">
-                <img src="/images/two_column.jpg" class="img-fluid">
+                <!-- <img src="/images/two_column.jpg" class="img-fluid"> -->
+                <img src="/images/twocolumn2.jpg" class="img-fluid twoColumnImg">
             </div>
         </div>
     </div>
