--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -199,7 +199,7 @@ h4 {
 .active {
   text-align: center;
 }
-img{
+.caro{
     height: 550px;
 }
 
@@ -220,8 +220,7 @@ img{
     #navigation h2:hover{
       color: red;
     }
-  /* .logo{
-      background-color: red;
-      height: 30px;
-      width: 20%;
-  } */
+  /* Two column */
+#two-column{
+    background-color: wheat;
+  }
