created a team section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -95,4 +95,62 @@
 
 <hr class="my-4">
 
+
+
+<!--  -->
+<!-- Meet the team section -->
+<section id="meet-team">
+  <div class="container-fluid">
+      <div class="row welcome text-center">
+          <div class="col-12">
+              <h1 class="display-4">Meet the Real Heroes...</h1>
+          </div>
+          <hr>
+      </div>
+  </div>
+
+  <!-- Cards Section -->
+  <div class="container-fluid padding">
+      <div class="row padding">
+          <div class="col-md-4">
+              <div class="card">
+                  <img class="card-img-top teamdoctor" src="" alt="">
+                  <div class="card-body">
+                      <h4 class="card-title">John Doe</h4>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
+                          consequuntur.</p>
+                      <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See
+                          More</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card">
+                  <img class="card-img-top teamworker" src="" alt="">
+                  <div class="card-body">
+                      <h4 class="card-title">Mary Jo</h4>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
+                          consequuntur.</p>
+                      <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See
+                          More</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card">
+                  <img class="card-img-top teampolice" src="" alt="">
+                  <div class="card-body">
+                      <h4 class="card-title">Phil Ho</h4>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
+                          consequuntur.</p>
+                      <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See
+                          More</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <br>
+  </div>
+</section>
+
   <%- include("footer") -%>
