--- a/views/home.ejs
+++ b/views/home.ejs
@@ -138,7 +138,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <img class="card-img-top teampolice" src="" alt="">
+                  <img class="card-img-top teampolice" src="/images/police1.cms" alt="">
                   <div class="card-body">
                       <h4 class="card-title">Phil Ho</h4>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
