add image in card2

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -126,7 +126,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <img class="card-img-top teamworker" src="" alt="">
+                  <img class="card-img-top teamworker" src="images/workers1.6.jpg" alt="">
                   <div class="card-body">
                       <h4 class="card-title">Mary Jo</h4>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
