--- a/views/home.ejs
+++ b/views/home.ejs
@@ -114,7 +114,7 @@
       <div class="row padding">
           <div class="col-md-4">
               <div class="card">
-                  <img class="card-img-top teamdoctor" src="" alt="">
+                  <img class="card-img-top teamdoctor" src="/images/doctor1.1.jpg" alt="">
                   <div class="card-body">
                       <h4 class="card-title">John Doe</h4>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
