add main heading for detailed section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -155,6 +155,19 @@
 
 <hr class="my-4">
 
+<!-- this is detailed section code -->
+
+<section id="detailed">
+  <div class="container-fluid">
+      <div class="row welcome text-center">
+          <div class="col-12">
+              <h1 class="display-4">What you want to know about COVID?</h1>
+          </div>
+          <hr>
+      </div>
+  </div>
+
+
 <div class="row">
   <div class="col-sm-6">
     <div class="card">
