--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,14 +23,14 @@
                     <a class="nav-link" href="#">Awareness</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="#">Suggestion</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Covid Live</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Suggestion</a>
-                </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Covid Live</a>
+                      </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sign in</a>
                 </li>
