--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -242,3 +242,11 @@ h4 {
   height: 300px;
 }
 
+/* detailed */
+#detailed{
+  background-color: burlywood;
+}
+#detailed .card{
+background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+}
