--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -247,6 +247,8 @@ h4 {
   background-color: burlywood;
 }
 #detailed .card{
-background-color: #0093E9;
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+background-color: #039be5;
+}
+#detailed .card-text{
+  color: white;
 }
