created a suggestion form

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -213,6 +213,33 @@
 
 <hr class="my-4">
 
+<!-- form -->
 
+<section id="suggestionForm">
+  <div class="container-fluid">
+      <div class="row welcome text-center">
+          <div class="col-12">
+              <h1 class="display-5">Suggestion Form</h1>
+          </div>
+          <hr>
+      </div>
+  </div>
+
+<form>
+  <div class="form-group">
+    <label for="exampleFormControlInput1">Name</label>
+    <input type="text" class="form-control" placeholder="Write your name here">
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlInput1">Email address</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Your Suggestion</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+</form>
+</section>
 
   <%- include("footer") -%>
