apply css in the form and add some bootstrap classes for the form

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -224,7 +224,7 @@
           <hr>
       </div>
   </div>
-
+<div class="col-md-6">
 <form>
   <div class="form-group">
     <label for="exampleFormControlInput1">Name</label>
@@ -240,6 +240,7 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
 </form>
+</div>
 </section>
 
   <%- include("footer") -%>
