--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -4,8 +4,100 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
+    <footer>
+      <section class="section-1">
+        <section class="about">
+          <h2>About</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+            dolor reprehenderit asperiores commodi iusto? Blanditiis voluptatum
+            ex non molestiae nemo illo, ullam mollitia ad dignissimos. Quo
+            consectetur adipisci voluptates nisi amet maiores excepturi magni,
+            voluptatibus nam. Reprehenderit fugit deserunt optio expedita modi,
+            quos animi eaque repudiandae impedit placeat non nulla?
+          </p>
+        </section>
+
+        <section class="categories">
+          <h1>Categories</h1>
+          <ul>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">JavaScript</a></li>
+            <li><a href="#">Node JS</a></li>
+            <li><a href="#">UI Design</a></li>
+            <li><a href="#">Java</a></li>
+            <li><a href="#">Python</a></li>
+          </ul>
+        </section>
+
+        <section class="quicklinks">
+          <h1>Quick Links</h1>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Sitemap</a></li>
+            <li><a href="#">Disclamier</a></li>
+          </ul>
+        </section>
+
+        <section class="contact">
+          <h1>Contact Us</h1>
+          <ul>
+            <li>
+              <i class="fa fa-home"></i>
+              <p>SCO-75, Chandigarh, India</p>
+            </li>
+            <li>
+              <i class="fa fa-envelope-square"></i>
+              <p>...@gmail.com</p>
+            </li>
+            <li>
+              <i class="fa fa-phone-square"></i>
+              <p>01111111111</p>
+            </li>
+            <li>
+              <i class="fa fa-facebook-square"></i>
+              <p>fb@1</p>
+            </li>
+          </ul>
+        </section>
+      </section>
+
+      <hr width="100%" noshade />
+      <section class="section-2">
+        <p>Register for Free</p>
+        <a href="">signup!</a>
+      </section>
+
+      <hr width="100%" noshade />
+      <section class="section-3">
+        <ul>
+          <li>
+            <a href="#"><i class="fa fa-facebook-square"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-twitter-square"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-google-plus-square"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-github-square"></i></a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="section-4">
+        <p>Copyright &copy; 2020 All Rights Reserved by Beta-labs.</p>
+      </section>
+    </f
 
 
-    
+
   </body>
 </html>
