modify closing tag of footer

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -95,7 +95,7 @@
       <section class="section-4">
         <p>Copyright &copy; 2020 All Rights Reserved by Beta-labs.</p>
       </section>
-    </f
+    </footer>
 
 
 
