--- a/views/home.ejs
+++ b/views/home.ejs
@@ -235,7 +235,7 @@
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
   </div>
 
-  <div class="form-group">
+  <div class="form-group submitText">
     <label for="exampleFormControlTextarea1">Your Suggestion</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
