--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -258,7 +258,9 @@ margin: 10px;
 #suggestionForm{
   background-color: #3aafa9;
 }
-
+#suggestionForm .submitText{
+  padding-bottom: 10px ;
+}
 /* footer */
 footer {
   background-color: #3f3f3f;
