--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
     <div class="row">
 
       <!-- left Part -->
-      <div class="col-md-6">
+      <div class="col-md-6 full">
         <div class="myLeftCtn">
           <form class="myForm text-center">
             <header>Create new Account</header>
@@ -29,7 +29,7 @@
       </div>
 
       <!-- Right Part -->
-      <div class="right col-md-6">
+      <div class="right col-md-6 full">
         <div class="myRightCtn">
           <div class="box">
             <header>COVID-19</header>
