--- a/views/covidLive.ejs
+++ b/views/covidLive.ejs
@@ -1,6 +1,13 @@
 <%- include('header') -%> 
 
-<table class="table table-striped table-dark">
+<table class="table table-hover table-dark">
+  <div class="container-fluid">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">COVID UPDATES</h1>
+        </div>
+    </div>
+</div>
   <thead>
     <tr>
       <th scope="col">Country Name</th>
