--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -91,7 +91,7 @@
       </section>
 
       <section class="section-4">
-        <p>Copyright &copy; 2020 All Rights Reserved by Beta-labs.</p>
+        <p>Copyright &copy; 2020 All Rights Reserved.</p>
       </section>
     </footer>
 
