add margin top to carousel

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -217,7 +217,9 @@ h4 {
 .caro {
   height: 550px;
 }
-
+.carousel{
+  margin-top: 10px;
+}
 /* navigation */
 #navigation .navbar {
   padding: 1.1rem;
