--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,207 +1,265 @@
 <%- include("header") -%>
 
 <body>
-
   <!-- carousel for homepage -->
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div
+    id="carouselExampleFade"
+    class="carousel slide carousel-fade"
+    data-ride="carousel"
+  >
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/caro2.jpg" class="w-70 caro" alt="...">
+        <img src="images/caro2.jpg" class="w-70 caro" alt="..." />
       </div>
       <div class="carousel-item">
-        <img src="/images/caro1.jpg" class="w-70 caro" alt="...">
+        <img src="/images/caro1.jpg" class="w-70 caro" alt="..." />
       </div>
       <div class="carousel-item">
-        <img src="/images/caro4.jpg" class="w-70 caro" alt="...">
+        <img src="/images/caro4.jpg" class="w-70 caro" alt="..." />
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+    <a
+      class="carousel-control-prev"
+      href="#carouselExampleFade"
+      role="button"
+      data-slide="prev"
+    >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+    <a
+      class="carousel-control-next"
+      href="#carouselExampleFade"
+      role="button"
+      data-slide="next"
+    >
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
 
-  <hr class="my-4">
+  <hr class="my-4" />
 
-  
   <!-- making two section -->
   <section id="two-column">
     <div class="container-fluid padding">
-        <div class="row padding">
-            <div class="col-lg-6">
-                <h2>If you build it...</h2>
-
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus dolor sit incidunt nesciunt
-                    omnis
-                    rem.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque consequuntur voluptate, ex illum
-                    asperiores ipsum corporis temporibus doloribus error vero iste quam cupiditate quisquam iusto?
-                </p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, similique?</p>
-                <br>
-                <a href="#"><button class="btn btn-primary">Learn More</button></a>
-
-            </div>
-            <div class="col-lg-6">
-                <img src="/images/twocolumn2.jpg" class="img-fluid twoColumnImg">
-            </div>
-        </div>
-    </div>
-</section>
-
-<hr class="my-4">
-
-
-
-<!--  -->
-<!-- Meet the team section -->
-<section id="meet-team">
-  <div class="container-fluid">
-      <div class="row welcome text-center">
-          <div class="col-12">
-              <h1 class="display-4">Meet the Real Heroes...</h1>
-          </div>
-          <hr>
-      </div>
-  </div>
-
-  <!-- Cards Section -->
-  <div class="container-fluid padding">
       <div class="row padding">
-          <div class="col-md-4">
-              <div class="card">
-                  <img class="card-img-top teamdoctor" src="/images/doctor1.1.jpg" alt="">
-                  <div class="card-body">
-                      <h4 class="card-title">John Doe</h4>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
-                          consequuntur.</p>
-                      <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See
-                          More</a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-              <div class="card">
-                  <img class="card-img-top teamworker" src="images/workers1.6.jpg" alt="">
-                  <div class="card-body">
-                      <h4 class="card-title">Mary Jo</h4>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
-                          consequuntur.</p>
-                      <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See
-                          More</a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-              <div class="card">
-                  <img class="card-img-top teampolice" src="/images/police1.cms" alt="">
-                  <div class="card-body">
-                      <h4 class="card-title">Phil Ho</h4>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
-                          consequuntur.</p>
-                      <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See
-                          More</a>
-                  </div>
-              </div>
-          </div>
+        <div class="col-lg-6">
+          <h2>If you build it...</h2>
+
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus
+            dolor sit incidunt nesciunt omnis rem.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+            consequuntur voluptate, ex illum asperiores ipsum corporis
+            temporibus doloribus error vero iste quam cupiditate quisquam iusto?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde,
+            similique?
+          </p>
+          <br />
+          <a href="#"><button class="btn btn-primary">Learn More</button></a>
+        </div>
+        <div class="col-lg-6">
+          <img src="/images/twocolumn2.jpg" class="img-fluid twoColumnImg" />
+        </div>
       </div>
-      <br>
-  </div>
-</section>
+    </div>
+  </section>
 
-<hr class="my-4">
+  <hr class="my-4" />
 
-<!-- this is detailed section code -->
-
-<section id="detailed">
-  <div class="container-fluid">
+  <!--  -->
+  <!-- Meet the team section -->
+  <section id="meet-team">
+    <div class="container-fluid">
       <div class="row welcome text-center">
-          <div class="col-12">
-              <h1 class="display-4">What you want to know about COVID?</h1>
+        <div class="col-12">
+          <h1 class="display-4">Meet the Real Heroes...</h1>
+        </div>
+        <hr />
+      </div>
+    </div>
+
+    <!-- Cards Section -->
+    <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top teamdoctor"
+              src="/images/doctor1.1.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h4 class="card-title">John Doe</h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nostrum, consequuntur.
+              </p>
+              <a href="#" class="btn btn-outline-secondary btn-lg"
+                ><i class="fa fa-user-circle"></i> See More</a
+              >
+            </div>
           </div>
-          <hr>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top teamworker"
+              src="images/workers1.6.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h4 class="card-title">Mary Jo</h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nostrum, consequuntur.
+              </p>
+              <a href="#" class="btn btn-outline-secondary btn-lg"
+                ><i class="fa fa-user-circle"></i> See More</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top teampolice"
+              src="/images/police1.cms"
+              alt=""
+            />
+            <div class="card-body">
+              <h4 class="card-title">Phil Ho</h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nostrum, consequuntur.
+              </p>
+              <a href="#" class="btn btn-outline-secondary btn-lg"
+                ><i class="fa fa-user-circle"></i> See More</a
+              >
+            </div>
+          </div>
+        </div>
       </div>
-  </div>
-
-
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">WHAT IS COVID?</h5>
-        <p class="card-text">Precautions and Symptoms for COVID</p>
-        <a href="#" class="btn btn-primary">Go in Detail</a>
-      </div>
+      <br />
     </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">HISTORY OF COVID...</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go in Detail</a>
-      </div>
-    </div>
-  </div>
-</div>
+  </section>
 
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">LIVE STATUS...</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go in Detail</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">HELPLINE NUMBERS...</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go in Detail</a>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
+  <hr class="my-4" />
 
-<hr class="my-4">
+  <!-- this is detailed section code -->
 
-<!-- form -->
-
-<section id="suggestionForm">
-  <div class="container-fluid">
+  <section id="detailed">
+    <div class="container-fluid">
       <div class="row welcome text-center">
-          <div class="col-12">
-              <h1 class="display-5">Suggestion Form</h1>
-          </div>
-          <hr>
+        <div class="col-12">
+          <h1 class="display-4">What you want to know about COVID?</h1>
+        </div>
+        <hr />
       </div>
-  </div>
-<div class="col-md-6">
-<form>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Name</label>
-    <input type="text" class="form-control" placeholder="Write your name here">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  </div>
+    </div>
 
-  <div class="form-group submitText">
-    <label for="exampleFormControlTextarea1">Your Suggestion</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-</form>
-</div>
-</section>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">WHAT IS COVID?</h5>
+            <p class="card-text">Precautions and Symptoms for COVID</p>
+            <a href="#" class="btn btn-primary">Go in Detail</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">HISTORY OF COVID...</h5>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <a href="#" class="btn btn-primary">Go in Detail</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<hr class="my-4">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">LIVE STATUS...</h5>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <a href="#" class="btn btn-primary">Go in Detail</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">HELPLINE NUMBERS...</h5>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <a href="#" class="btn btn-primary">Go in Detail</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <hr class="my-4" />
+
+  <!-- form -->
+
+  <section id="suggestionForm">
+    <div class="container-fluid">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1 class="display-5">Suggestion Form</h1>
+        </div>
+        <hr />
+      </div>
+    </div>
+    <div class="col-md-6">
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Write your name here"
+          />
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Email address</label>
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+        </div>
+
+        <div class="form-group submitText">
+          <label for="exampleFormControlTextarea1">Your Suggestion</label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <hr class="my-4" />
   <%- include("footer") -%>
+</body>
