--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,55 +1,67 @@
 <%- include("header") -%>
 <body class="signin">
-<!-- Main container -->
-<div class="container">
-  <div class="myCard">
-    <div class="row">
+  <!-- Main container -->
+  <div class="container">
+    <div class="myCard">
+      <div class="row">
+        <!-- Left Part -->
+        <div class="col-md-6">
+          <div class="myLeftCtn">
+            <form class="myForm text-center" action="/home" method="post">
+              <header>SignIn/LogIn</header>
 
-      <!-- Left Part -->
-      <div class="col-md-6">
-        <div class="myLeftCtn">
-          <form class="myForm text-center" action="/home" method="post">
-            <header>
-              SignIn/LogIn
-            </header>
+              <!-- For email address input -->
+              <div class="form-group">
+                <i class="fa fa-envelope"></i>
+                <input
+                  type="email"
+                  class="myInput"
+                  placeholder="Email"
+                  id="userId"
+                  required
+                />
+              </div>
 
-            <!-- For email address input -->
-            <div class="form-group">
-              <i class="fa fa-envelope"></i>
-              <input type="email" class="myInput" placeholder="Email" id="userId" required>
-            </div>
+              <!-- For password Input -->
+              <div class="form-group">
+                <i class="fa fa-lock"></i>
+                <input
+                  type="password"
+                  class="myInput"
+                  placeholder="Password"
+                  id="username"
+                  required
+                />
+              </div>
 
-            <!-- For password Input -->
-            <div class="form-group">
-              <i class="fa fa-lock"></i>
-              <input type="password" class="myInput" placeholder="Password" id="username" required>
-            </div>
+              <a class="forgot-password" href="#">Forgot Password?</a>
 
-            <a class="forgot-password" href="#">Forgot Password?</a>
-
-            <!-- Submit button -->
-            <input type="submit" class="button" value="LogIn/SignIn">
-            <p class="log">Don't have an account? <a href="#">SignUp</a></p>
-          </form>
+              <!-- Submit button -->
+              <input type="submit" class="button" value="LogIn/SignIn" />
+              <p class="log">Don't have an account? <a href="#">SignUp</a></p>
+            </form>
+          </div>
         </div>
-      </div>
 
-      <!-- For right part -->
-      <div class="right col-md-6">
-        <div class="myRightCtn">
-          <div class="box">
-            <header>
-              Covid-19
-            </header>
-            <img class="signimg" src="images/circle-cropped.png" alt="Covid-Image">
-            <h3>Join Us</h3>
-            <h4>Health and Wellness</h4>
-            <input type="button" class="button" value="About Us">
+        <!-- For right part -->
+        <div class="right col-md-6">
+          <div class="myRightCtn">
+            <div class="box">
+              <header>Covid-19</header>
+              <img
+                class="signimg"
+                src="images/circle-cropped.png"
+                alt="Covid-Image"
+              />
+              <h3>Join Us</h3>
+              <h4>Health and Wellness</h4>
+              <input type="button" class="button" value="About Us" />
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<%- include('footer') -%>
+  <%- include('footer') -%>
+</body>
