added an image to navigation bar

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,7 @@
   <section id="navigation">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <!-- <a class="navbar-brand" href="#"><img src="/images/logo.jpeg"> -->
+            <a class="navbar-brand" href="#"><img src="/images/logo.jpeg">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
