add an image in suggestion form section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -228,7 +228,9 @@
         <hr />
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="container-fluid padding">
+    <div class="row padding">
+    <div class="col-md-8">
       <form>
         <div class="form-group">
           <label for="exampleFormControlInput1">Name</label>
@@ -257,6 +259,11 @@
           ></textarea>
         </div>
       </form>
+    </div>
+    <div class="col-md-4">
+      <img src="images/suggest.png" alt="">
+    </div>
+    </div>
     </div>
   </section>
 
