Remove ejs header from signin and sign up page

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,4 +1,19 @@
-<%- include("header") -%>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
 <body class="signin">
   <!-- Main container -->
   <div class="container">
@@ -13,25 +28,13 @@
               <!-- For email address input -->
               <div class="form-group">
                 <i class="fa fa-envelope"></i>
-                <input
-                  type="email"
-                  class="myInput"
-                  placeholder="Email"
-                  id="userId"
-                  required
-                />
+                <input type="email" class="myInput" placeholder="Email" id="userId" required />
               </div>
 
               <!-- For password Input -->
               <div class="form-group">
                 <i class="fa fa-lock"></i>
-                <input
-                  type="password"
-                  class="myInput"
-                  placeholder="Password"
-                  id="username"
-                  required
-                />
+                <input type="password" class="myInput" placeholder="Password" id="username" required />
               </div>
 
               <a class="forgot-password" href="#">Forgot Password?</a>
@@ -48,11 +51,7 @@
           <div class="myRightCtn">
             <div class="box">
               <header>Covid-19</header>
-              <img
-                class="signimg"
-                src="images/circle-cropped.png"
-                alt="Covid-Image"
-              />
+              <img class="signimg" src="images/circle-cropped.png" alt="Covid-Image" />
               <h3>Join Us</h3>
               <h4>Health and Wellness</h4>
               <input type="button" class="button" value="About Us" />
