--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,19 @@
-<%- include("header") -%>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
 <body class="signup">
   <!-- Main container -->
   <div class="container">
@@ -11,33 +26,15 @@
               <header>Create new Account</header>
               <div class="form-group">
                 <i class="fa fa-user"></i>
-                <input
-                  type="text"
-                  class="myInput"
-                  placeholder="Username"
-                  id="username"
-                  required
-                />
+                <input type="text" class="myInput" placeholder="Username" id="username" required />
               </div>
               <div class="form-group">
                 <i class="fa fa-envelope"></i>
-                <input
-                  type="email"
-                  class="myInput"
-                  placeholder="Email"
-                  id="userId"
-                  required
-                />
+                <input type="email" class="myInput" placeholder="Email" id="userId" required />
               </div>
               <div class="form-group">
                 <i class="fa fa-lock"></i>
-                <input
-                  type="password"
-                  class="myInput"
-                  placeholder="Password"
-                  id="username"
-                  required
-                />
+                <input type="password" class="myInput" placeholder="Password" id="username" required />
               </div>
               <input type="submit" class="button" value="CREATE ACCOUNT" />
               <p class="log">Already have an account? <a href="#">SignIn</a></p>
