Change categories in footer section

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -23,12 +23,11 @@
       <section class="links1">
         <h2>Categories</h2>
         <ul>
-          <li><a href="#">C</a></li>
-          <li><a href="#">UI Desining</a></li>
-          <li><a href="#">PHP</a></li>
+          <li><a href="#">JavaScript</a></li>
+          <li><a href="#">Node JS</a></li>
+          <li><a href="#">UI Design</a></li>
           <li><a href="#">Java</a></li>
-          <li><a href="#">Android</a></li>
-          <li><a href="#">Hybrid Apps</a></li>
+          <li><a href="#">Python</a></li>
         </ul>
       </section>
 
@@ -87,6 +86,6 @@
 
     <!-- Section 4 -->
     <section class="section-4">
-      <p>Copyright @ 2020 All Rights Reserved by <a href="practical9.html">Our Team</a></p>
+      <p>Copyright @ 2020 All Rights Reserved by <a href="practical9.html">K-Labs</a></p>
     </section>
   </footer>
