Add links for sign in and sign up page in header section

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,25 +28,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Awareness</a>
+            <a class="nav-link" href="">Awareness</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Suggestion</a>
+            <a class="nav-link" href="">Suggestion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Covid Live</a>
+            <a class="nav-link" href="#">Covid</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sign in</a>
+            <a class="nav-link" href="/sign">Sign</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+            <a class="nav-link" href="/register">Register</a>
           </li>
         </ul>
       </div>
